@@ -45,7 +45,7 @@ import static org.apache.parquet.schema.MessageTypeParser.parseMessageType;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.verifyZeroInteractions;
+import static org.mockito.Mockito.verifyNoInteractions;
 
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
@@ -53,7 +53,6 @@ import com.google.common.primitives.Ints;
 import java.io.IOException;
 import java.io.Serializable;
 import java.math.BigInteger;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -106,6 +105,7 @@ public class DictionaryFilterTest {
       + "required binary binary_field; "
       + "required binary single_value_field; "
       + "optional binary optional_single_value_field; "
+      + "optional int32 optional_single_value_int32_field;"
       + "required fixed_len_byte_array(17) fixed_field (DECIMAL(40,4)); "
       + "required int32 int32_field; "
       + "required int64 int64_field; "
@@ -194,6 +194,7 @@ public class DictionaryFilterTest {
       // 10% of the time, leave the field null
       if (index % 10 > 0) {
         group.append("optional_single_value_field", "sharp");
+        group.append("optional_single_value_int32_field", 42);
       }
 
       writer.write(group);
@@ -286,10 +287,11 @@ public class DictionaryFilterTest {
 
   @SuppressWarnings("deprecation")
   private void testDictionaryEncodedColumnsV1() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
+        "optional_single_value_int32_field",
         "int32_field",
         "int64_field",
         "double_field",
@@ -323,10 +325,11 @@ public class DictionaryFilterTest {
   }
 
   private void testDictionaryEncodedColumnsV2() throws Exception {
-    Set<String> dictionaryEncodedColumns = new HashSet<String>(Arrays.asList(
+    Set<String> dictionaryEncodedColumns = new HashSet<String>(List.of(
         "binary_field",
         "single_value_field",
         "optional_single_value_field",
+        "optional_single_value_int32_field",
         "fixed_field",
         "int32_field",
         "int64_field",
@@ -671,6 +674,20 @@ public class DictionaryFilterTest {
   }
 
   @Test
+  public void testNullAcceptingUdp() throws Exception {
+    InInt32UDP drop42DenyNulls = new InInt32UDP(Sets.newHashSet(205));
+    InInt32UDP drop42AcceptNulls = new InInt32UDP(Sets.newHashSet(null, 205));
+
+    // A column with value 42 and 10% nulls
+    IntColumn intColumnWithNulls = intColumn("optional_single_value_int32_field");
+
+    assertTrue("Should drop block", canDrop(userDefined(intColumnWithNulls, drop42DenyNulls), ccmd, dictionaries));
+    assertFalse(
+        "Should not drop block for null accepting udp",
+        canDrop(userDefined(intColumnWithNulls, drop42AcceptNulls), ccmd, dictionaries));
+  }
+
+  @Test
   public void testInverseUdp() throws Exception {
     InInt32UDP droppable = new InInt32UDP(ImmutableSet.of(42));
     InInt32UDP undroppable = new InInt32UDP(ImmutableSet.of(205));
@@ -714,7 +731,7 @@ public class DictionaryFilterTest {
         "Should never drop block using plain encoding",
         canDrop(notEq(plain, nElements + 10), ccmd, dictionaryStore));
 
-    verifyZeroInteractions(dictionaryStore);
+    verifyNoInteractions(dictionaryStore);
   }
 
   @Test
@@ -740,7 +757,7 @@ public class DictionaryFilterTest {
         "Should never drop block using plain encoding",
         canDrop(notEq(plain, nElements + 10), ccmd, dictionaryStore));
 
-    verifyZeroInteractions(dictionaryStore);
+    verifyNoInteractions(dictionaryStore);
   }
 
   @Test
